--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -30,6 +30,7 @@ h1 {
     margin: 20px 0 0 0;
     color: #F1EFEF;
     font-size: 50px;
+    letter-spacing: 5px;
     font-family: 'Dancing Script', cursive;
     text-align: center;
 }
@@ -41,6 +42,8 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
+    border-radius: 20px;
+    box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,6 +94,7 @@ h1 {
 
 .container__progress-area .progress-area__bar {
     position: relative;
+    width: 0%;
     height: inherit;
     border-radius: inherit;
     background: rgba(0, 0, 0, 0.5);
